...
                onValueChange(it)
                isInteracted = true
            },
            placeholder = { Text(hint) },
            visualTransformation = visualTransformation,
            singleLine = true,
            modifier = Modifier.testTag("passwordInput")
                .onFocusChanged { focusState ->
                    if (focusState.isFocused) {
                        isInteracted = true
                    }
                },
            trailingIcon = {
                IconButton(onClick = { visible = !visible }) {
                    Icon(
                        imageVector = if (visible) Icons.Default.Visibility else Icons.Default.VisibilityOff,
                        contentDescription = "Toggle Password Visibility",
                        tint = Color.Gray
                    )
                }
            }
        )
        if (passwordVisibility && isInteracted && value.isNotBlank()) {
...
